--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,11 +20,11 @@
   	<url-pattern>*.jpeg</url-pattern>
   </servlet-mapping>
   <servlet>
-    	<servlet-name>CreateController</servlet-name>
-    	<servlet-class>mvc.controller.CreateController</servlet-class>
+    	<servlet-name>PicController</servlet-name>
+    	<servlet-class>mvc.controller.PicController</servlet-class>
     </servlet>
     <servlet-mapping>
-    	<servlet-name>CreateController</servlet-name>
+    	<servlet-name>PicController</servlet-name>
     	<url-pattern>*.do</url-pattern>
     </servlet-mapping>
 </web-app>
